# folio_web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  package-lock.json  package.json  payload.config.ts  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci-python.yml  ci.yml
__tests__/data/: projects.test.ts
__tests__/lib/: payload-fallback.test.ts  payload.test.ts  utils.test.ts
__tests__/scripts/: seed.test.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
collections/: Awards.ts  Career.ts  Certifications.ts  Education.ts  Projects.ts  Publications.ts  Skills.ts
components/ui/: Badge.tsx  (+4 more)
data/: awards.ts  career.ts  education.ts  index.ts  projects.ts  skills.ts
docs/: PRD.md  checkpoint-fullstack.md  checkpoint.md
folio_agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
folio_agent/src/: api.py  config.py  db.py
folio_agent/src/agent/: graph.py  state.py  utils.py
folio_agent/src/agent/nodes/: generator.py  retriever.py  router.py
folio_agent/src/embeddings/: cli.py  extract.py  vectorize.py
folio_agent/tests/: test_api.py  test_cli.py  test_config.py  test_db.py  test_extract.py  test_generator.py  test_graph.py  test_retriever.py  test_router.py  test_state.py  test_vectorize.py
hooks/: useChatbot.ts
lib/: chat-security.ts  constants.ts  env.ts  markdown-cleanup.ts  motion.ts  payload.ts
migrations/: index.ts
scripts/: list-tables.ts  patch-next-env.cjs  rls-setup.sql  rls-verify.sql  run-seed.mts  seed.ts
(+42 files in other folders)
