[project]
name = "folio-agent"
version = "0.1.0"
description = "AI chatbot backend for folio_web portfolio"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "langgraph>=0.4",
  "langchain-anthropic>=0.3",
  "langchain-community>=0.3",
  "anthropic>=0.43",
  "openai>=1.60",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "sse-starlette>=2.2",
  "pydantic-settings>=2.7",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.9",
  "httpx>=0.28",
  "respx>=0.22",
]
